# CPP_Quant_lib

./: README.md
Project1/: CMakeLists.txt  QFGB8960 Advanced C++ for Finance.ipynb  README.md  ReleaseNotes.md
Project1/pyqflib/: pyfunctions0.hpp  pymodule.cpp  pyproject.toml  pytestfunc.hpp
Project1/pyqflib/qflib/: __init__.py  homework1.cpp
Project1/qflib/: CMakeLists.txt  defines.hpp  empty.cpp
Project2/: ReleaseNotes.md
Project2/examples/Python/: qflib-examples.ipynb  qflib-examples.py
Project2/pyqflib/: CMakeLists.txt  pyfunctions1.hpp  pymodule.cpp  pyproject.toml
Project2/pyqflib/qflib/: __init__.py
Project2/qflib/: defines.hpp  exception.hpp
Project2/qflib/math/stats/: normaldistribution.hpp
Project2/qflib/pricers/: simplepricers.cpp  simplepricers.hpp
Project3/qflib-0.3.0/: ReleaseNotes.md
Project3/qflib-0.3.0/examples/Python/: qflib-examples.ipynb  qflib-examples.py
Project3/qflib-0.3.0/pyqflib/: pycpp.hpp  pyfunctions0.hpp  pyfunctions1.hpp  pymodule.cpp  pyproject.toml
Project3/qflib-0.3.0/pyqflib/qflib/: __init__.py
Project3/qflib-0.3.0/qflib/: CMakeLists.txt  defines.hpp
Project3/qflib-0.3.0/qflib/pricers/: simplepricers.cpp  simplepricers.hpp
Project4/qflib-0.4.0/: CMakeLists.txt  ReleaseNotes.md
Project4/qflib-0.4.0/examples/Python/: qflib-examples.py  qflib-examples_HW4_solutions.ipynb
Project4/qflib-0.4.0/pyqflib/: CMakeLists.txt  pyfunctions0.hpp  pyfunctions1.hpp  pymodule.cpp  pyproject.toml
Project4/qflib-0.4.0/pyqflib/qflib/: __init__.py
Project4/qflib-0.4.0/qflib/: CMakeLists.txt  defines.hpp
Project4/qflib-0.4.0/qflib/math/stats/: errorfunction.cpp  errorfunction.hpp  univariatedistribution.hpp
Project4/qflib-0.4.0/qflib/pricers/: simplepricers.cpp  simplepricers.hpp
Project5/: .gitignore  ReleaseNotes.md
Project5/examples/Python/: qflib-examples.ipynb  qflib-examples.py  qflib-examples_HW5(P1_P3).ipynb
Project5/pyqflib/: pyfunctions0.hpp  pyfunctions1.hpp  pymodule.cpp  pyproject.toml  pyutils.hpp
Project5/pyqflib/qflib/: __init__.py
Project5/qflib/: CMakeLists.txt  defines.hpp  sptr.hpp  sptrmap.hpp
Project5/qflib/math/: matrix.hpp
Project5/qflib/math/interpol/: piecewisepolynomial.cpp  piecewisepolynomial.hpp
Project5/qflib/pricers/: simplepricers.cpp  simplepricers.hpp
