# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qflib"
version = "0.0.0"
description = "qflib quant library"
maintainers = [{name = "Michael G Sotiropoulos", email = "msotirop@fordham.edu"}]
dependencies = ["numpy"]
license = {text = "Proprietary"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
qflib = ["*.pyd", "*.so"]
